cabal-version:      2.4
name:               x1
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: First day of AoC solutions for 2022

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             gskapoor
maintainer:         kapoorgobind@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable x1
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010


test-suite tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends: base ^>=4.14, HUnit ^>=1.6
    hs-source-dirs: tests
    default-language: Haskell2010


